<resources>
    <string name="app_name">WidgetSchedule</string>
    <string name="schedule_url">Schedule URL</string>
    <string name="save">Save</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Bring your schedule to Your Home Screen!</string>
    <string name="schedule_item_title_example">Meeting</string>
    <string name="schedule_item_timespan_example">9am-9:45am</string>
    <string name="schedule_date_example">Wed</string>
    <string name="schedule_day_example">1</string>
    <string name="contains_day_of_week_description">Check this if Your table contains weekdays on the second column</string>
    <string name="contains_day_of_week">Contains Day Of Week</string>
    <string name="remove_empty_items">Remove Empty Items</string>
    <string name="remove_empty_item_description">Check this if you want to ignore empty items like \'-\' or empty spaces</string>
    <string name="do_not_show_the_last_table">Do not show the Last Table</string>
    <string name="do_not_show_the_last_table_description">This ignores the last table on the Website</string>
    <string name="widget_settings">Widget Settings</string>
    <string name="schedule">Schedule</string>
    <string name="item_colors">Item Colors</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="item_color">Item Color</string>
    <string name="refresh_the_widget">Refresh the Widget</string>
    <string name="widget_current_items_button">Change to all items or only upcoming items</string>
    <string name="all">All</string>
    <string name="color_fragment_new_criteria">Text Criteria</string>
    <string name="color_fragment_header">Colors</string>
    <string name="color_fragment_help">Write text criteria that matches the item in your schedule and select a color to assign it to the item.</string>
    <string name="widget_settings_fragment_header">Widget Settings</string>
    <string name="widget_settings_fragment_help">Here you can change some settings for the widget, if you would like to see any different settings, then please open an issue in my <a href="https://github.com/PuckyEU/WidgetSchedule">Github Repository</a>.</string>
</resources>